2002-10-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/display/nr-arena-shape.c (nr_arena_shape_pick): Use libnr
	distance7wind calculation, if item is not at render state
	(nr_arena_shape_update): Only update bbox, if render state is not
	needed. This gave us approximately 10x faster dragging of comlex shapes

	* src/libnr/nr-path.c (nr_line_wind_distance): New helper method
	(nr_curve_bbox_wind_distance): Ditto
	(nr_path_matrix_f_point_f_bbox_wind_distance): Fast method to find
	bbox and/or wind and/or distance to bezier path

2002-10-16  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/print.h: New file, frontend to printing

	* src/print.c: New file, frontend to printing

2002-10-15  Davide Puricelli  <evo@debian.org>

	* debian/*: Updated

2002-10-15  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-item.c (sp_item_invoke_print): Rename, signature change

	* src/sp-item.h: SPItem::print signature change

	* src/forward.h: Added SPPrintContext

	* src/libnr/testnr.c (main): Fill mask with blocks of transparent, opaque
	and random data. This should be closer to reality and (surprise!) gives better
	performance numbers too!

	* src/libnrtype/nr-typeface.c: Moved everyting to virtual method vector

2002-10-13  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sp-canvas.c (uta_clear): Experimental method
	(paint): Return, if events pending (commented out)
	(do_update): Return value
	(idle_handler): Use update return value

	* src/libnr/testnr.c: Speed test

	* src/libnr/nr_mmx_R8G8B8_R8G8B8_R8G8B8A8_P.S: New file

	* src/helper/sp-canvas-util.c (sp_canvas_clear_buffer): Be quick

	* src/helper/sp-canvas.h: Moved update flags back here

	* src/display/canvas-arena.c (sp_canvas_arena_update): Sort updates according to affine (again)

	* src/libnr/have_mmx.S: New file (copied from gdk-pixbuf)

	* configure.in (use_mmx_asm): Check for mmx

	* src/libnr/nr-compose.c (nr_R8G8B8A8_P_R8G8B8A8_P_A8_RGBA32): Use mmx if present
