@@ -28,8 +28,6 @@
 ArtSVP *art_svp_translate (const ArtSVP *svp, double dx, double dy);
 ArtUta *art_uta_from_svp_translated (const ArtSVP *svp, double cx, double cy);
 
-ArtDRect *sp_bpath_matrix_d_bbox_d_union (const ArtBpath *bpath, const double *m, ArtDRect *bbox, double tolerance);
-
 #define sp_distance_d_matrix_d_transform(d,m) (d * sqrt (fabs ((m)[0] * (m)[3] - (m)[1] * (m)[2])))
 
 ArtVpath *sp_vpath_from_bpath_transform_closepath (const ArtBpath *bpath, NRMatrixF *transform, int close, double flatness);
